--- a/src/screens/App/App.css
+++ b/src/screens/App/App.css
@@ -1,9 +1,11 @@
+/* Resetting default styles for the body */
 .body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+/* Styling the main container */
 .main-container {
   background: #d7c6f3;
   min-height: 100vh;
@@ -18,6 +20,14 @@
   gap: 1.8rem;
 }
 
+.calculator-container {
+  border-radius: 0.9375rem;
+  background: #fff;
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.13);
+  padding: 3rem 1.5rem;
+}
+
+/* Styling for selector buttons */
 .selector-btn {
   text-align: center;
   border-radius: 0.75rem;
@@ -27,12 +37,10 @@
   cursor: pointer;
 }
 
-.calculator-container {
-  border-radius: 0.9375rem;
-  background: #fff;
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.13);
-  padding: 3rem 1.5rem;
+.selected-type {
+  color: #231833;
 }
+
 
 .educational-level,
 .type {
@@ -76,6 +84,7 @@
   flex: 1;
 }
 
+/* Styling for page configuration */
 .page-config {
   display: flex;
   gap: 0.7rem;
@@ -86,13 +95,14 @@
   padding: 0.7rem 1.5rem;
 }
 
-.price {
-  width: fit-content;
-}
-
 .inner-container-3 {
   display: flex;
   justify-content: space-between;
+}
+
+/* Styling for price section */
+.price {
+  width: fit-content;
 }
 
 .approx-price {
@@ -112,6 +122,7 @@
   text-align: center;
 }
 
+/* Styling for order button */
 .order-btn {
   border-radius: 0.9375rem;
   background: #ffc966;
@@ -126,24 +137,21 @@
 
 .order-btn:hover {
   transform: scale(1.05);
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1); /* Adjust shadow properties as needed */
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.selected-type {
-  color: #231833;
-}
 
+/* Media query for screens with a maximum width of 600px */
 @media (max-width: 600px) {
 
   .main-container{
-    padding: 0 1.5rem;
+    padding: 1.5rem 1.5rem;
   }
   .qty-and-deadline {
     flex-wrap: wrap;
   }
   .educational-level,
   .type {
-    /* flex-wrap: wrap; */
     display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, auto);
